<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/background_custom"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/tv_info_name_person"
        style="@style/TextViewWhiteStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/nameInfo"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/itv_info_gender_person"
        style="@style/TextViewWhiteStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/gender"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_info_name_person"
        app:layout_constraintTop_toBottomOf="@+id/tv_info_name_person" />

    <TextView
        android:id="@+id/tv_info_count_starships"
        style="@style/TextViewWhiteStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/starship_pilot"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/itv_info_gender_person"
        app:layout_constraintTop_toBottomOf="@+id/itv_info_gender_person" />

    <TextView
        android:id="@+id/tv_name_person"
        style="@style/TextViewWhiteStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/name_name"
        app:layout_constraintStart_toEndOf="@+id/tv_info_name_person"
        app:layout_constraintTop_toTopOf="@+id/tv_info_name_person" />

    <TextView
        android:id="@+id/tv_gender_person"
        style="@style/TextViewWhiteStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/male"
        app:layout_constraintStart_toEndOf="@+id/itv_info_gender_person"
        app:layout_constraintTop_toTopOf="@+id/itv_info_gender_person" />

    <TextView
        android:id="@+id/tv_starships_person"
        style="@style/TextViewWhiteStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/two"
        app:layout_constraintStart_toEndOf="@+id/tv_info_count_starships"
        app:layout_constraintTop_toTopOf="@+id/tv_info_count_starships" />

    <ImageView
        android:id="@+id/btnFavourite"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="24dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_favorite_border_24" />

    <ImageView
        android:id="@+id/btnDelete"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="24dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_close_24" />

    <TextView
        android:id="@+id/textView"
        style="@style/TextViewWhiteStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/character"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>